third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/frame_cache.decompiled.exp
processed 7 tasks
task 0 lines 3-7:  publish [module 0x42::dummy {]
task 1 lines 10-23:  publish [module 0x42::foo {]
task 2 lines 26-41:  publish [module 0x42::bar {]
task 3 lines 44-55:  publish [module 0x42::poc {]
Error: compilation errors:
 warning: unused alias
   ┌─ TEMPFILE3:46:15
   │
46 │     use 0x42::dummy;
   │               ^^^^^ Unused 'use' of alias 'dummy'. Consider removing it

error: unable to infer instantiation of type `_` (consider providing type arguments or annotating the type)
   ┌─ TEMPFILE3:50:43
   │
50 │         let _t2 : || has copy + drop = || foo::foo_roundtrip();
   │                                           ^^^^^^^^^^^^^^^^^^^^


task 4 lines 58-58:  run 0x42::poc::run --signers 0x42
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 5 lines 60-60:  run 0x42::bar::dummy_bar_exists --signers 0x42
return values: false
task 6 lines 62-62:  run 0x42::foo::foo_exists --signers 0x42 --type-args 0x42::dummy::Dummy
return values: false
